crates/plotnik-tests/tests/03-analyze/ref_resolution/resolution_is_case_sensitive.txt
Foo = (x)
Q = (call (FOO))
------------------ DIAGNOSTICS -------------------
error: `FOO` is not defined
 --> query.ptk:2:12
  |
2 | Q = (call (FOO))
  |            ^^^
  |
help: replace with the defined reference `(Foo)`
  |
2 - Q = (call (FOO))
2 + Q = (call (Foo))
  |
------------------ DEFINITIONS -------------------
Foo
Q
  FOO?
